infra/envoy-gw/config/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
  name: gateway-api
  namespace: infra-gateways
  labels:
    name: gateway-api
    component: gateway
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: eg-config
  listeners:
    - name: https
      protocol: HTTPS
      hostname: kubernino.local
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: app
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: kubernino-https
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
