infra/envoy-gw/config/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: global-https-redirect
  namespace: infra-gateways
spec:
  parentRefs:
  - kind: Gateway
    group: gateway.networking.k8s.io
    name: gateway-api
    namespace: infra-gateways
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
    matches:
        - path:
            type: PathPrefix
            value: /
